集群部署补充学习